added socialbhai api in yt sent view

--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
-export YT_REDIRECT_URL = http://localhost:8000/en/advance/dashboard/youtube_callback/
+YT_REDIRECT_URL = http://localhost:8000/en/advance/dashboard/youtube_callback/
+
+SOCIALBHAI_URL = 'https://socialbhai.in/api/v1'
+SOCIALBHAI_KEY = 'ydwZ40i6Heqv3QtXEW1TTNOZ8V4dOSwI'
+MIN_YT_SENT_VIEW_LIMIT = '400'
