like, views working

--- a/.env
+++ b/.env
@@ -1,5 +1,10 @@
-YT_REDIRECT_URL = http://localhost:8000/en/advance/dashboard/youtube_callback/
+YT_REDIRECT_URL ='http://localhost:8000/en/advance/dashboard/youtube_callback/'
 
 SOCIALBHAI_URL = 'https://socialbhai.in/api/v1'
 SOCIALBHAI_KEY = 'ydwZ40i6Heqv3QtXEW1TTNOZ8V4dOSwI'
+
 MIN_YT_SENT_VIEW_LIMIT = '400'
+MIN_YT_SENT_LIKE_LIMIT = '10'
+
+SOCIALBHAI_VIEW_ACTION_ID = '2582'
+SOCIALBHAI_LIKE_ACTION_ID = '2730'
