comment added but comment list need to set up

--- a/.env
+++ b/.env
@@ -5,6 +5,10 @@ SOCIALBHAI_KEY = 'ydwZ40i6Heqv3QtXEW1TTNOZ8V4dOSwI'
 
 MIN_YT_SENT_VIEW_LIMIT = '400'
 MIN_YT_SENT_LIKE_LIMIT = '10'
+MIN_YT_SENT_COMMENT_LIMIT = '10'
+MIN_YT_SENT_SUBSCRIBE_LIMIT = '200'
 
 SOCIALBHAI_VIEW_ACTION_ID = '2582'
 SOCIALBHAI_LIKE_ACTION_ID = '2730'
+SOCIALBHAI_SUBSCRIBE_ACTION_ID = '2645'
+SOCIALBHAI_COMMENT_ACTION_ID = '2735'
