--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ asgiref==3.2.10
 async-generator==1.10
 attrs==20.2.0
 backcall==0.2.0
-billiard==3.6.3.0
+billiard
 boto3==1.24.61
 botocore==1.27.61
 cachetools==4.2.1
@@ -13,7 +13,7 @@ certifi==2022.6.15
 cffi==1.15.1
 chardet==3.0.4
 charset-normalizer==2.1.1
-click==7.1.2
+click
 click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.2.0
@@ -99,7 +99,7 @@ typed-ast==1.5.4
 typing_extensions==4.3.0
 uritemplate==4.1.1
 urllib3==1.26.12
-vine==1.3.0
+vine
 wcwidth==0.2.5
 webencodings==0.5.1
 wsproto==1.2.0
